# csv2parquet

./: .dockerignore  .gitignore  .rusty-hook.toml  Cargo.toml
.github/workflows/: release.yml  rust.yml
scripts/: build.sh  pre-commit.sh  release.sh
src/: main.rs  schema.rs
