[package]
name = "csv2parquet"
version = "0.6.1"
authors = ["Dominik Moritz <domoritz@cmu.edu>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/domoritz/csv2parquet"
description = "Convert CSV files to Parquet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parquet = "55.1.0"
arrow = {version = "55.1.0" }
arrow-csv = "55.1.0"
arrow-schema = {version = "55.1.0", features = ["serde"]}
clap = { version = "4.5.38", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
tempfile = "3.20.0"
