[package]
name = "csv2parquet_mod"
version = "0.6.2"
authors = ["Frank Lan <franklan118@gmail.com>", "Dominik Moritz <domoritz@cmu.edu>"]
license = "MIT/Apache-2.0"
edition = "2024"
repository = "https://github.com/tlan16/csv2parquet.git"
description = "Convert CSV files to Parquet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parquet = "55.1.0"
arrow = {version = "55.1.0" }
arrow-csv = "55.1.0"
arrow-schema = {version = "55.1.0", features = ["serde"]}
clap = { version = "4.5.38", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
tempfile = "3.20.0"
rusty-hook = "0.11.2"
